--- a/add.html
+++ b/add.html
@@ -9,5 +9,21 @@
     </div>
     <button type="submit">Add</button>
   </form>
-  >
+  <script>
+    const electron = require('electron');
+    const { ipcRenderer } = electron;
+
+    document.querySelector('form').addEventListener('submit', event => {
+      event.preventDefault();
+
+      console.log('cliked');
+    });
+
+    document.querySelector('form').addEventListener('submit', event => {
+      event.preventDefault();
+
+      const { value } = document.querySelector('input');
+      ipcRenderer.send('todo:add', value);
+    });
+  </script>
 </body>
